user_solutions.html mostly done, overflow needs fixing. The comments section needs to be able to be hidden or shown on toggle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,9 +140,10 @@ main{
 /* Changes - search is a flex container for h2 and bar, removed various attributes */
 main .search {
 	flex: 1;
-	width: 60%;
-	height: 100%;
+	min-width: 60%;
+	min-height: 100%;
 	background-color: rgba(235,235,235, 0.6);
+	overflow: auto;
 }
 
 /* Changes - added h2 styiling for main */
@@ -226,6 +227,7 @@ main #solutions button#add-solution {
 main p#show-path {
 	display: inline-block;
 	margin-left: 30px;
+	color: #6f6f6f;
 
 }
 
@@ -242,7 +244,12 @@ main #solutions {
 main [id^="sol-"] {
 	color: #333;
 	margin-top: 30px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	margin-bottom: 30px;
+	-moz-border-radius: 15px;
+	border-radius: 15px;
+	-moz-box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);;
+	-webkit-box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);;
 }
 
 main [id^="sol-"] .post-info {
@@ -333,6 +340,7 @@ main [id^="sol-"] div.comments { /* BORDER RADIUS ISN'T WORKING - sad :( */
 	background-color: #f0e9e1;
 	border-bottom-right-radius: 15px;
 	border-bottom-left-radius: 15px;
+	padding: 10px;
 }
 
 main [id^="sol-"] div.comments:hover {
@@ -346,10 +354,46 @@ main [id^="sol-"] div.comments h3 {
 	margin-bottom: 0;
 }
 
+main [id^="sol-"] div.comments ul li img {
+	border-radius: 50%;
+	width: 40px;
+	vertical-align: top;
+}
 
+main [id^="sol-"] div.comments ul li {
+	background-color: white;
+	border-radius: 10px;
+	background-color: #F7D08A;
+	padding: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-webkit-box-shadow: 0 2px 2px 0 #C2C2C2;
+	box-shadow: 0 2px 2px 0 #C2C2C2;
+	margin-bottom: 15px;
+}
 
+main [id^="sol-"] div.comments ul li p.comment-username {
+	margin-bottom: 0;
+	margin-top: 5px;
+}
 
+main [id^="sol-"] div.comments ul li img.comment-user-image, li p.comment-username {
+	display: inline-block;
+}
 
+main [id^="sol-"] div.comments ul li p.comment-username, li p.user-comment {
+	vertical-align: top;
+}
+
+main [id^="sol-"] div.comments ul li * {
+	padding: 5px;
+}
+
+main [id^="sol-"] div.comments ul li p.user-comment {
+	margin: 0;
+	background-color: white;
+	border-radius: 5px;
+}
 
 
 /*************************** END OF USER SOLUTIONS - user_solutions.html *********************************/
